--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,10 @@
-name: Hello World
-on: [push]
+name: First Workflow
+on: workflow_dispatch
 jobs:
-  Hello-World-Job:
-    runs-on:
-      - codebuild-testgithubcodebuild-${{ github.run_id }}-${{ github.run_attempt }}
+  first-job:
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello World!"
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print goodbye
+        run: echo "Done - bye!"
